add main structure to slider

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,61 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <main class="page">
+        <div class="slider swiper">
+          <!-- photo -->
+          <div class="slider__wrapper swipper-wrapper">
+            <div class="slider__slide slide swiper-slide">
+              <ul class="slide__body">
+                <li class="slide__image">
+                  <img
+                    src="./images/brazilian-girl.jpg"
+                    alt="brazilian girl"
+                    class="slide__picture"
+                    data-title="Photo by Omid Armin"
+                  />
+                </li>
+                <li class="slide__image">
+                  <img
+                    src="./images/french-girl.jpg"
+                    alt="french-girl"
+                    class="slide__picture"
+                    data-title="Photo by Ali Pazani"
+                  />
+                </li>
+                <li class="slide__image">
+                  <img
+                    src="./images/angola-girl.jpg"
+                    alt="angola girl"
+                    class="slide__picture"
+                    data-title="Photo by Prince Akachi"
+                  />
+                </li>
+                <li class="slide__image">
+                  <img
+                    src="./images/aziat-girl.jpg"
+                    alt="aziat girl"
+                    class="slide__picture"
+                    data-title="Photo by Jimmy Fermin"
+                  />
+                </li>
+                <li class="slide__image">
+                  <img
+                    src="./images/african-girl.jpg"
+                    alt="african girl"
+                    class="slide__picture"
+                    data-title="Photo by Prince Akachi"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- slider scrollbar -->
+          <div class="slider__scrollbar"></div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
